# OCC

./: .gitattributes  README.md  occ.spec  pyproject.toml
src/occ/: __main__.py  colors.py  config.py
