[project]
name = "occ"
version = "0.1.0"
description = "The Optimistic Compiler Collection — because every program deserves to succeed"
authors = [
    { name = "JourneyCodesAyush", email = "journeycodes.ayush@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
occ = "occ:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"