[project]
name = "occ"
version = "0.1.1"
description = "The Optimistic Compiler Collection — because every program deserves to succeed"
authors = [
    { name = "JourneyCodesAyush", email = "journeycodes.ayush@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
occ = "occ.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # E = pycodestyle, F = pyflakes, I = isort